# esp32-camcar-on-wifi

./: .gitignore  CMakeLists.txt  idf.ps1  partitions.csv  sdkconfig.defaults  setup_idf_env.ps1
.trae/rules/: coding-standard.md  comment-rule.md  error-handle-debug.md  file-naming-rules.md  hardware-specificx.md  memory-manage.md  output-format.md  project-architecture-file-structure.md
main/: CMakeLists.txt  config.h  idf_component.yml  main.c
main/camera/: camera_driver.c  camera_driver.h  camera_stream.c  camera_stream.h
main/hal/: hal_camera.c  hal_camera.h  hal_motor.c  hal_motor.h
main/motor_control/: motor_control.c  motor_control.h
main/network/: command_handler.c  command_handler.h  http_server.c  http_server.h  wifi_config.h.example  wifi_manager.c  wifi_manager.h
spiffs/: index.html
